@@ -1,0 +1,7 @@
+use strictures 1;
+package Mojito::DB;
+use Moo;
+
+with('Mojito::Role::DB');
+
+1
