@@ -92,20 +92,15 @@ sub get_most_recent_docs {
     return $self->collection->find->sort( { last_modified => -1 } );
 }
 
-=head2 get_most_recent_ids
+=head2 get_feed_docs
 
-Get just the ids of the documents sorted by date in reverse chrono order.
+Get the documents for a particular feed sorted by date in reverse chrono order.
 
 =cut
 
-sub get_most_recent_ids {
-    my ($self) = @_;
-    my $cursor = $self->get_most_recent;
-    my @ids;
-    while ( my $doc = $cursor->next ) {
-        push @ids, $doc->{'_id'};
-    }
-    return \@ids;
+sub get_feed_docs {
+    my ($self, $feed) = @_;
+    return $self->collection->find({feeds => $feed})->sort( { last_modified => -1 } );
 }
 
 =head2 get_most_recent_link_data
@@ -118,8 +113,31 @@ TODO: There's HTML in here, omg.
 
 sub get_most_recent_link_data {
     my ($self) = @_;
-
     my $cursor = $self->get_most_recent_docs;
+    return $self->get_link_data($cursor);
+}
+
+=head2 get_feed_link_data
+
+Get the data to create links for a particular feed.
+
+=cut
+
+sub get_feed_link_data {
+    my ($self, $feed) = @_;
+    my $cursor = $self->get_feed_docs($feed);
+    return $self->get_link_data($cursor);
+}
+
+=head2 get_link_data
+
+Given a cursor of documents then create the link data.
+
+=cut
+
+sub get_link_data {
+    my ($self, $cursor) = @_;
+    
     my $link_data;
     while ( my $doc = $cursor->next ) {
         my $title = $doc->{title} || 'no title';
@@ -142,10 +160,48 @@ sub get_most_recent_links {
     my $base_url = $self->base_url;
     
     my $link_data = $self->get_most_recent_link_data;
-    my $links = '<span id="recent_articles_label" style="font-weight: bold;">Recent Articles</span><br />';
+    my $link_title = '<span id="recent_articles_label" style="font-weight: bold;">Recent Articles</span><br />';
+    my $links = $self->create_list_of_links($link_data, $args);
+
+    return $link_title . $links;
+}
+
+=head2 get_feed_links
+
+Get the links for the documents belonging to a particular feed.
+
+=cut
+
+sub get_feed_links {
+    my ($self, $feed) = @_;
+    
+    my $link_data = $self->get_feed_link_data($feed);
+    my $title = ucfirst($feed) . ' Articles';
+    my $link_title = "<span class='feeds' style='font-weight: bold;'>$title</span><br />";
+    my $links = $self->create_list_of_links($link_data, {want_public_link => 1});
+    if ($links) {
+        return $link_title . $links;
+    }
+    else {
+        "The <em>$feed</em> feed is <b>empty</b>";
+    }
+}
+
+=head2 create_list_of_links
+
+Given link data (doc id and title) and possibly some $args then create hyperlinks
+
+=cut
+
+sub create_list_of_links {
+    my ($self, $link_data, $args) = @_;
+    
+    my $base_url = $self->base_url;
+    $base_url .= 'public/' if $args->{want_public_link};
+    my $links;
     foreach my $datum (@{$link_data}) {
         $links .= "<a href=\"${base_url}page/" . $datum->{id} . '">' . $datum->{title} . "</a>";
-        if ($args->{want_delete_link}) {
+        if ($args && $args->{want_delete_link}) {
             $links .=  " | <a id=\"page_delete\" href=\"${base_url}page/"   . $datum->{id} . '/delete"> delete</a>';
         }
         $links .= "<br />\n";
